# OpenCL-examples

Hello_World/: CMakeLists.txt  hello.c
